--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,10 @@
     <title>Dharma</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="display:flex;align-items:center;justify-content:center;min-height:100vh;font-family:system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, sans-serif;">
+      <noscript>This app requires JavaScript to run.</noscript>
+      <div id="boot-fallback" style="color:#444;">Loading…</div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
